--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -1,13 +1,13 @@
 body { font-family:arial, helvetica, san-serif ; font-size:13px; color:#333333; background-color: #ffffff; margin:0}
-p {font-size:13px; margin:4px 0 6px; margin-top:0.5em;}
+p {font-size:13px; margin:4px 0 6px; margin-top:0.5px;word-wrap:break-word;margin-left:0.5px;}
 a {color: #3366ff;}
 img {display:block;}
-/*a:focus, a:hover, a:active { outline:none }*/
+a:focus, a:hover, a:active { outline:none }
 ul {position:relative;}
-h1 { font-size:22px; color: #000000; margin:0 0 16px; padding:0; font-weight:bold;}
+h1 { font-size:22px; color: #000000; margin:0 0 16px; padding:0; font-weight:bold;text-align:center}
 h1 div {font-size:12px;}
-h2 { font-size:14px; color:#877C6F; margin:-12px 0 22px; padding:0; font-weight:normal;}
-h3 { font-size:12px; color:#FFFFFF; margin:16px 0 6px; padding:4px; line-height:10px; font-weight:bold;text-transform:uppercase; background-color:#CC0000; }/*position:relative;*/
+h2 { font-size:10px; color:#000000; margin:-12px 0 22px; padding:0;  text-decoration:underline;text-align:center}
+h3 { font-size:12px; color:#FFFFFF; margin:16px 0 6px; padding:4px; line-height:10px; font-weight:bold;text-transform:uppercase; background-color:#CC0000; }
 h3 a {color:#FFFFFF; text-transform:lowercase;}
 h3 div { float:right;}
 h3.short {margin-top:0px;}
@@ -27,13 +27,20 @@ h6 {color:#333333; text-transform:lowercase; font-size:13px; padding:0px; font-w
     font-weight:bold;
     font-size:18px;
 }
-/*.table{*/
-    /*border-collapse: collapse;*/
-    /*display:table;*/
-    /*width:950px;*/
-    /*table-layout:fixed;*/
-    /*padding:inherit*/
-/*}*/
+
+.index-card{
+    background:#dcdcdc;
+    border-radius:25px;border: 0px solid #a1a1a1;
+    -webkit-border-bottom-left-radius: 0px;
+    -webkit-border-bottom-right-radius: 0px;
+    -moz-border-radius-topleft: 0px;
+    -moz-border-radius-bottomleft: 0px;
+    -moz-border-radius-bottomright: 0px;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+    border-top-left-radius: 0px;
+    box-shadow: 10px 10px 5px #888888;
+}
 
 .table-th{
     border: 1px solid black;
