Staring on front-end for event admin.

--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -66,7 +66,7 @@ h6 {color:#333333; text-transform:lowercase; font-size:13px; padding:0px; font-w
     background-color: #ffffff;
 }
 
-#upcomingEvents ts{
+#upcomingEvents td{
     background-color: #ffffff;
 }
 
