--- a/src/main/webapp/resources/css/colourfultabs.css
+++ b/src/main/webapp/resources/css/colourfultabs.css
@@ -130,7 +130,7 @@
         overflow: hidden;
         width: 960px;
         display: none;
-        z-index: 999;                  `
+        z-index: 999;
         list-style: none;
         padding-left: 0px;
     }
@@ -187,6 +187,3 @@
     ul#nav li#link-fund-raising ul.sub-nav li a:hover, ul#nav li#link-fund-raising ul.sub-nav li a.active-cat {
         background: #02b0cf !important;
     }
-
-
-}
